First pass at replacing the current more options menu with an ext menu. Should solve most of the issues where menu gets cut off.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@12613 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_notes.scss
+++ b/src/main/resources/scss/_notes.scss
@@ -343,6 +343,37 @@
 	}
 }
 
+.reply-options-menu{
+	.x-menu-item {
+		&.reply-option{
+			padding: 1px 10px 2px 37px !important;
+			line-height: 27px;
+			cursor: pointer;
+			font-size: 14px;
+			font-weight: normal;
+			position: relative;
+
+
+			&::after{
+				content: ' ';
+				width: 18px;
+				height: 18px;
+				background: url(../images/options-menu-sprite.png) 0 0 no-repeat;
+				position: absolute;
+				top: 5px;
+				left: 10px;
+			}
+
+			&.edit::after{ background-position: 0 -90px; }
+			&.flag::after{ background-position: 0 -18px; }
+			&.add-contact::after{ background-position: 0 -36px; }
+			&.follow::after{ background-position: 0 -54px; }
+			&.block::after{ background-position: 0 -72px; }
+			&.mute::after{ background-position: 0 -126px; }
+			&.delete::after{ background-position: 0 -108px; }
+		}
+	}
+}
 
 .note-gutter {
 
